--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,17 @@
 {
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@assets/*": ["src/assets/*"],
+      "@components/*": ["src/assets/script/components/*"],
+    },
+    "plugins": [
+      {
+        "name": "@astrojs/ts-plugin",
+      }
+    ]
+  },
   "extends": "astro/tsconfigs/strict",
-  "include": [".astro/types.d.ts", "**/*"],
-  "exclude": ["dist"]
+  "include": [".astro/types.d.ts", "src/**/*"],
+  "exclude": ["dist", "node_modules"]
 }
